Fix overflow on picker page

--- a/picker.css
+++ b/picker.css
@@ -5,6 +5,11 @@
     scroll-behavior: none;
 }
 
+html {
+    overflow: hidden;
+    overscroll-behavior: none;
+}
+
 #canvas {
     display: block;
     z-index: 0;
